--- a/Primera clase DOM/index.html
+++ b/Primera clase DOM/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,53 +8,63 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="Imagenes/jpg" href="./Fuentes/Images/Logo Fluir 2.jpg">
 </head>
+
 <body>
     <header>
+
         <nav>
             <img id="logo" src="./Fuentes/Images/Logo Fluir 2.jpg" alt="Logo de la Pagina" width="100px" height="100px">
+            <!-- onclick="addBorder(this)" onmouseover="addBorder(event)" onmouseout="addBorder(event)" -->
             <div class="menu">
-            <ul id="navegador">
-                <li>Nosotros</li>
-                <li>Eventos</li>
-                <li>Campañas</li>
-                <li>Contacto</li>
-            </ul>
-        </div>
+                <ul id="navegador">
+                    <li>Nosotros</li>
+                    <li>Eventos</li>
+                    <li>Campañas</li>
+                    <li>Contacto</li>
+                </ul>
+            </div>
         </nav>
     </header>
     <main>
-<section class="maincontent">
-    <div class="principal">
-    <p id="titulo">Relaciones Publicas</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem deleniti libero velit recusandae, blanditiis fuga, reprehenderit repudiandae nobis facere, reiciendis omnis totam vero necessitatibus mollitia? Atque a ut quasi vero.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, laudantium repellat saepe voluptatem vitae voluptates nemo cupiditate, qui esse, corporis enim explicabo iste inventore praesentium rerum eum eveniet dolores iusto?</p>
-</div>
-    <div class="imagewrapper">
-    <img id="img" class="img" src="./Fuentes/Images/Do something great.jpg" alt="Imagen referencial">    
-</div>
-</section>
-<section id="sections">
-    <div class="imagecontainer">
-        <img src="./Fuentes/Images/Girl Boss.jpg" alt="Mujer con taza cafe">
-        <h2 class="subtitulos">Mujeres en Sistema</h2>
-    </div>
-    <div class="imagecontainer">
-        <img src="./Fuentes/Images/Home Office.jpg" alt="Imagen de computadora">
-        <h2>Home Office</h2>
-    </div>
-    <!-- <div class="imagecontainer ladyboss">
-        <img src="./Fuentes/Images/Lady Boss.jpg" alt="Imagen de mujer con taza">
-        <h2>Lady Boss</h2>
-    </div>
-    <div class="imagecontainer ladyboss">
-        <img src="./Fuentes/Images/Telephone.jpg" alt="Imagen de telefono y computadora">
-        <h2>Telephone Work</h2>
-    </div> -->
-</section>
-<div class="btn"> 
-    <button class="button" name="button">Mas Artículos</button>
-</div>
+        <section class="maincontent">
+            <div class="principal">
+                <p id="titulo">Relaciones Publicas</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem deleniti libero velit
+                    recusandae, blanditiis fuga, reprehenderit repudiandae nobis facere, reiciendis omnis totam vero
+                    necessitatibus mollitia? Atque a ut quasi vero.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, laudantium repellat saepe
+                    voluptatem vitae voluptates nemo cupiditate, qui esse, corporis enim explicabo iste inventore
+                    praesentium rerum eum eveniet dolores iusto?</p>
+            </div>
+            <div class="imagewrapper">
+                <img id="img" class="img" src="./Fuentes/Images/Do something great.jpg" alt="Imagen referencial">
+            </div>
+        </section>
+        <section id="sections">
+            <div class="imagecontainer">
+                <img id="img1" src="./Fuentes/Images/Girl Boss.jpg" alt="Mujer con taza cafe">
+                <h2 id="girlBoss" class="subtitulos">Mujeres en Sistema</h2>
+            </div>
+            <div class="imagecontainer">
+                <img id="img2" src="./Fuentes/Images/Home Office.jpg" alt="Imagen de computadora">
+                <h2 id="homeOffice">Home Office</h2>
+            </div>
+            <div id="newarticles" class="newarticles imagewrapper">
+                <div class="imagecontainer">
+                    <img src="./Fuentes/Images/Lady Boss.jpg" alt="Imagen de mujer con taza">
+                    <h2>Lady Boss</h2>
+                </div>
+                <div class="imagecontainer">
+                    <img src="./Fuentes/Images/Telephone.jpg" alt="Imagen de telefono y computadora">
+                    <h2 >Social Media</h2>
+                </div>     
+            </div>
+        </section>
+        <div class="btn">
+            <button id="button" class="button" name="button">Mas Artículos</button>
+        </div>
     </main>
     <script src="index.js"></script>
 </body>
+
 </html>
