Agrega cantidad de productos seleccionados iguales y el precio total

--- a/Workshop/index.html
+++ b/Workshop/index.html
@@ -31,6 +31,7 @@
             <div class="carrito-items" id="carrito-items"></div>
             <button class="comprar" id="comprar">Comprar</button>
             <button class="vaciar" id="vaciar-carrito">Vaciar</button>
+            <button class="order" id="listorder">Ordenar elementos</button>
         </div>
        
     </header>
@@ -57,12 +58,7 @@
             <button>Comprar</button>
         </div> -->
     </div>
-
-
-
-
-
-
+    
     <script src="index.js"></script>
 </body>
 
